sumo/tests/traci/VariableRetrieval/Lane/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Mon Jul 01 13:25:29 2013


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=163 varID=48 objID=xxx
.. Answered with error to command (163), [description: Lane 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
